unpackaged/pre/first/objects/District__c.object
<CustomObject>
    <fields>
        <fullName>American_Indian_Alaska_Native_Students__c</fullName>
        <label>American Indian/Alaska Native Students</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asian_or_Asian_Pacific_Islander_Students__c</fullName>
        <label>Asian or Asian/Pacific Islander Students</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Black_Students__c</fullName>
        <label>Black Students</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Name__c</fullName>
        <label>County Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Contact_Name__c</fullName>
        <label>District Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Contact_Phone__c</fullName>
        <label>District Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>District_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Districts (Contact)</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Elementary_Teachers__c</fullName>
        <label>Elementary Teachers</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Time_Equivalent_Teachers__c</fullName>
        <label>Full Time Equivalent Teachers</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grades_1_8_Students__c</fullName>
        <label>Grades 1-8 Students</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grades_9_12_Students__c</fullName>
        <label>Grades 9-12 Students</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guidance_Counselors__c</fullName>
        <label>Guidance Counselors</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hispanic_Students__c</fullName>
        <label>Hispanic Students</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instructional_Aides__c</fullName>
        <label>Instructional Aides</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instructional_Coordinators__c</fullName>
        <label>Instructional Coordinators</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kindergarten_Teachers__c</fullName>
        <label>Kindergarten Teachers</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEA_Admin_Support_Staff__c</fullName>
        <label>LEA Admin Support Staff</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEA_Administrators__c</fullName>
        <label>LEA Administrators</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Librarians_Media_Specialists__c</fullName>
        <label>Librarians/Media Specialists</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Library_Media_Support_Staff__c</fullName>
        <label>Library Media Support Staff</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Locale_Code__c</fullName>
        <label>Locale Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>41</fullName>
                </value>
                <value>
                    <fullName>42</fullName>
                </value>
                <value>
                    <fullName>43</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <formula>CASE(Locale_Code__c,
&quot;11&quot;,&quot;City:Large&quot;,
&quot;13&quot;,&quot;City:Small&quot;,
&quot;21&quot;,&quot;Suburb:Large&quot;,
&quot;23&quot;,&quot;Suburb:Small&quot;,
&quot;31&quot;,&quot;Town:Fringe&quot;,
&quot;32&quot;,&quot;Town:Distant&quot;,
&quot;41&quot;,&quot;Rural:Fringe&quot;,
&quot;42&quot;,&quot;Rural:Distant&quot;,
&quot;43&quot;,&quot;Rural:Remote&quot;,
&quot;&quot;
)</formula>
        <label>Locale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_Number__c</fullName>
        <label>Map Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCES_District_ID__c</fullName>
        <externalId>true</externalId>
        <label>NCES District ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Support_Services_Staff__c</fullName>
        <label>Other Support Services Staff</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Placeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Placeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreK_Teachers__c</fullName>
        <label>PreK Teachers</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreK_and_Kindergarten_Students__c</fullName>
        <label>PreK and Kindergarten Students</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Admin_Support_Staff__c</fullName>
        <label>School Admin Support Staff</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Administrators__c</fullName>
        <label>School Administrators</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schools__c</fullName>
        <label>Schools</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Teachers__c</fullName>
        <label>Secondary Teachers</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_District_ID__c</fullName>
        <externalId>true</externalId>
        <label>State District ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <defaultValue>&quot;TX&quot;</defaultValue>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Support_Services_Staff__c</fullName>
        <label>Student Support Services Staff</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Teacher_Ratio__c</fullName>
        <formula>IF(AND(NOT(ISNULL(Students__c)), NOT(ISNULL(Full_Time_Equivalent_Teachers__c)), Full_Time_Equivalent_Teachers__c &lt;&gt; 0), (Students__c/Full_Time_Equivalent_Teachers__c),null)</formula>
        <label>Student Teacher Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Students__c</fullName>
        <label>Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Superintendent_Name__c</fullName>
        <label>Superintendent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Superintendent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Superintendent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Districts (Superintendent)</relationshipLabel>
        <relationshipName>Districts_Superintendent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Staff__c</fullName>
        <label>Total Staff</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular School District</fullName>
                </value>
                <value>
                    <fullName>Other Education Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ungraded_Teachers__c</fullName>
        <label>Ungraded Teachers</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>White_Students__c</fullName>
        <label>White Students</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>District</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NCES_District_ID__c</columns>
        <columns>State_District_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Districts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>